Flere justeringer i header og artikkelmal

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -38,7 +38,7 @@
     {%- block bodyscript -%}{%- endblock -%}
     {%- include "partials/footer.njk" -%}
 
-    {# {%- include "partials/prototypeNav.njk" -%} #}
+    {%- include "partials/prototypeNav.njk" -%}
     
   </body>
 </html>
