--- a/src/_includes/article-page.njk
+++ b/src/_includes/article-page.njk
@@ -2,13 +2,13 @@
 
 {%- block content -%}
 
-  {% set chapters = collections.sykepenger | sort(false, false, 'data.order') %}
+  {% set chapters = collections[page.fileSlug] | sort(false, false, 'data.order') %}
 
   <main class="relative grid items-start pt-16 pb-16 grid-cols-article" data-theme="sykepenger" x-data="{ chapterIndex: 0 }">
     <div class="mb-3 col-main md:col-pictogram" style="--pictogram: #F5D3E2">
       {{ '/src/_includes/svg/piktogrammer/produkter/sykepenger.svg' | svgContents('text-brand-purple-deep w-16 h-16 sm:w-20 sm:h-20 -translate-x-1') | safe  }}
     </div>
-    <div class="col-main">
+    <div class="col-start-[main] col-end-[container]">
       <h1 class="font-semibold text-fluid-36-48/tight text-pretty text-brand-purple-deep">{{ title | safe }}</h1>
       <div class="mt-2 text-gray-700 text-fluid-16-18 font-regular">
         {{ category | safe }}
@@ -28,22 +28,22 @@
     </div>
 
     {# Innholdsfortegnelse #}
-    <div class="mt-8 md:row-span-4 md:mt-5 lg:sticky lg:row-start-3 xl:row-start-2 lg:top-12 col-main md:col-toc" id="toc" x-intersect:leave.margin.-300px.0.0.0="floatingToc = true" x-intersect:enter="floatingToc = false">
+    <div class="mt-8 md:row-span-4 md:mt-5 lg:sticky lg:row-start-3 xl:row-start-2 lg:top-12 col-main md:col-toc" id="toc" x-intersect:leave.margin.-200px.0.0.0="floatingToc = true" x-intersect:enter.margin.100px.0.0.0="floatingToc = false, floatingTocOpen = false">
       <h2 class="flex items-baseline mb-2 font-semibold gap-x-0.5 text-fluid-18-20">
-        {{ '/src/_includes/svg/icons/document.svg' | svgContents('w-6 h-6 translate-y-1.5 -translate-x-1') | safe  }}
+        {{ '/src/_includes/svg/icons/document.svg' | svgContents('w-6 h-6 translate-y-1 -translate-x-1') | safe  }}
         <span>Innhold på siden</span>
       </h2>
       <ul class="pb-1 ml-1.5">
         {% for chapter in chapters %}
         {% set chapterIndex = loop.index %}
         <li class="mt-1">
-          <a class="inline-block py-1 pl-5 underline hover:text-blue-700 hover:decoration-2" href="#{{ chapter.data.title | slugify }}">
+          <a class="inline-block py-1 pl-5 underline hover:text-blue-700 hover:decoration-2 underline-offset-3 decoration-slate-800/40" href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
           </a>
           {% if (chapter.templateContent | tocData).length >= 2 %}           
           <ul class="hidden mt-2 mb-4 ml-5 border-l-2 md:block border-slate-400" x-show="chapterIndex == {{ chapterIndex }}">
           {% for item in chapter.templateContent | tocData %}
-            <li><a class="inline-block py-1.5 pl-3 underline text-gray-900/80 hover:text-blue-700 text-fluid-16-18/snug hover:decoration-2" href="#{{ item.id }}">
+            <li><a class="inline-block py-1.5 pl-3 underline opacity-90 hover:text-blue-700 text-fluid-16-18/snug decoration-slate-800/40 hover:decoration-2" href="#{{ item.id }}">
                 <span>{{ item.text }}</span>
               </a>
             </li>
@@ -74,17 +74,17 @@
     <div class="pt-2 mt-12 italic border-t text-fluid-16-18 border-slate-200 col-main">{{ published | safe }}</div>
 
     {# Floating TOC #}
-    <div class="sticky bottom-0 z-50 flex flex-col-reverse overflow-y-visible col-full lg:hidden">
+    <div class="sticky z-50 overflow-y-visible bottom-1 col-full lg:hidden" x-show="floatingToc" x-transition.scale.origin.bottom.right>
       <button 
         type="button" 
-        class="absolute bottom-0 right-0 flex items-baseline self-start py-2 pl-5 pr-6 mx-4 mb-4 font-semibold bg-white border-2 rounded-full cursor-pointer hover:bg-slate-100 gap-x-1 text-fluid-18-20 border-slate-400"
+        class="absolute flex items-baseline self-start py-1 pl-4 pr-5 mb-4 font-semibold text-white border-2 rounded-full cursor-pointer bg-slate-800 right-4 -bottom-1 hover:bg-slate-700 gap-x-1 text-fluid-18-20 border-slate-400"
         x-on:click="floatingTocOpen = !floatingTocOpen"
         x-show="!floatingTocOpen"
       >
         {{ '/src/_includes/svg/icons/document.svg' | svgContents('w-6 h-6 translate-y-1 -translate-x-0.5') | safe  }}
         <span class="-translate-y-px">Innhold på siden</span>
       </button>
-      <div class="pl-6 pr-8 py-6 overflow-y-auto rounded-tl-3xl shadow-2xl bg-white max-h-[60svh] max-w-8/12 ml-auto  overscroll-contain" x-show="floatingTocOpen" x-on:click.outside="floatingTocOpen = false">
+      <div class="pl-6 pr-8 py-6 fixed bottom-0 right-0 overflow-y-auto rounded-tl-xl shadow-2xl bg-white h-fit max-h-[70svh] max-w-8/12 ml-auto  overscroll-contain" x-show="floatingTocOpen" x-on:click.outside="floatingTocOpen = false">
         <h2 class="inline-flex gap-1 font-semibold">
           {{ '/src/_includes/svg/icons/document.svg' | svgContents('w-6 h-6 translate-y-1 -translate-x-0.5') | safe  }}
           <span>Innhold på siden</span>
