--- a/src/_includes/article-page.njk
+++ b/src/_includes/article-page.njk
@@ -5,7 +5,7 @@
   {% set chapters = collections[page.fileSlug] | sort(false, false, 'data.order') %}
 
   <main class="relative grid items-start pt-16 pb-16 grid-cols-article" data-theme="sykepenger" x-data="{ chapterIndex: 0 }">
-    <div class="mb-3 col-main md:col-pictogram" style="--pictogram: #F5D3E2">
+    <div class="mb-3 col-pictogram" style="--pictogram: #F5D3E2">
       {{ '/src/_includes/svg/piktogrammer/produkter/sykepenger.svg' | svgContents('text-brand-purple-deep w-16 h-16 sm:w-20 sm:h-20 -translate-x-1') | safe  }}
     </div>
     <div class="col-main md:col-start-[main] md:col-end-[container]">
