--- a/src/_includes/partials/prototypeNav.njk
+++ b/src/_includes/partials/prototypeNav.njk
@@ -1,8 +1,8 @@
-<aside x-ref="prototypeMenu" aria-label="Sider i prototypen" class="fixed left-0 z-30 grid items-end justify-end font-mono bottom-5" x-data="{ prototypeMenuOpen: false }">
-  <button type="button" class="relative z-20 translate-x-6 grid p-1.5 transition-transform -rotate-45 hover:rotate-0 group bg-pink-400/60 hover:bg-pink-600 hover:text-pink-300 text-white rounded place-items-center aspect-square cursor-pointer" x-on:click="prototypeMenuOpen = !prototypeMenuOpen" x-bind:class="prototypeMenuOpen && 'bg-pink-700 text-pink-300'">
-    {{ '/src/_includes/svg/icons/globe.svg' | svgContents('w-7 h-7 transition-transform rotate-45 group-hover:rotate-0') | safe }}
+<aside x-ref="prototypeMenu" aria-label="Sider i prototypen" class="fixed top-0 right-0 z-40 grid items-end justify-end font-mono" x-data="{ prototypeMenuOpen: false }">
+  <button type="button" class="relative z-20 grid p-1.5 group bg-orange-300 hover:bg-red-500 hover:text-yellow-400 rounded-bl place-items-center aspect-square cursor-pointer" x-on:click="prototypeMenuOpen = !prototypeMenuOpen" x-bind:class="prototypeMenuOpen && 'bg-slate-900 text-yellow-300'">
+    {{ '/src/_includes/svg/icons/helmet.svg' | svgContents('w-7 h-7 origin-center transition-transform -translate-y-px translate-x-px group-hover:rotate-0') | safe }}
   </button>
-  <div class="absolute left-0 z-0 w-screen max-w-lg p-8 pb-12 text-white bg-pink-500 shadow-2xl text-fluid-16-18 sm:text-fluid-18-20 bottom-1/2 rounded-r-2xl" x-show="prototypeMenuOpen" x-on:click.outside="prototypeMenuOpen = false"
+  <div class="absolute top-0 right-0 z-0 w-screen max-w-lg px-6 py-3 bg-orange-300 shadow-2xl text-fluid-16-18 sm:text-fluid-18-20 rounded-bl-2xl" x-show="prototypeMenuOpen" x-on:click.outside="prototypeMenuOpen = false"
     x-transition:enter="transition-transform "
     x-transition:enter-start="opacity-0"
     x-transition:enter-end="opacity-1"
@@ -11,13 +11,12 @@
     <ul class="mt-3">
     {% set pages = collections.proto | sort(false, false, 'data.order') %}
     {%- for type, pages in pages | groupby('data.type') -%}
-      <li class="py-1 border-t border-black/10">
-        <b>{{ type }}:</b>
+      <li class="py-2 border-t border-black/10">
         {% for item in pages -%}
-        <a href="{{ item.url }}" class="inline-block py-1 underline hover:decoration-2 decoration-from-font underline-offset-4">
-         {{ item.data.title | safe }}
-        </a>
-        {%- if pages.length > 1 and not loop.last %}, {% endif %}
+        <a href="{{ item.url }}" class="py-1 underline hover:decoration-2 decoration-from-font underline-offset-4">{{ item.data.title | safe }}</a>{%- if pages.length > 1 and not loop.last %}, {% endif -%}
+        {% if loop.last %}
+          <b class="block pt-1 text-fluid-12-14 opacity-80">{{ type }}</b>
+        {% endif %}
         {%- endfor -%}
       </li>
     {%- endfor -%}
