--- a/src/_includes/partials/banner.njk
+++ b/src/_includes/partials/banner.njk
@@ -1,11 +1,36 @@
-<aside aria-label="Bare en prototype" class="relative z-50 grid pt-6 pb-8 text-fluid-20-22 leading-snug text-black bg-orange-300 border-t-8 border-warning px-edge">
-  <div class="flex items-start gap-4 md:gap-5 md:items-center col-wide">
-    <div class="grid w-16 h-16 -mb-px bg-orange-900 rounded-full shrink-0 place-items-center">
-      {{ '/src/_includes/svg/icons/helmet.svg' | svgContents('w-8 h-8 mb-1 text-orange-200') | safe }}
+<aside aria-label="Bare en prototype" class="relative z-50 grid grid-cols-12 px-8 leading-snug text-black bg-orange-200 border-t-8 text-fluid-20-22 border-warning ">
+  <div class="flex items-start col-span-10 gap-6 pt-6 pb-8 pl-20">
+    <div class="grid p-3 translate-y-0.5 bg-black rounded-full aspect-square shrink-0 place-items-center -ml-20">
+      {{ '/src/_includes/svg/icons/helmet.svg' | svgContents('w-8 h-8 translate-x-px text-orange-400 -translate-y-0.5') | safe }}
     </div>
     <div class="max-w-[50ch] text-balance">
       <p><span class="mr-1 font-semibold">Hei!</span> Dette er en en prototype til testing og utvikling.
       <a class="text-blue-600 underline pointer-fine:hover:decoration-2 pointer-fine:hover:text-blue-600" href="https://www.nav.no/">Her er lenken til nav.no</a> om du har kommet feil.</p>
     </div>
   </div>
+  {% if page.url !== "/" %}
+    
+  <div class="self-center col-start-12 ml-auto">
+    <button type="button" class="relative z-20 grid p-2 rounded cursor-pointer bg-orange-400/40 group hover:bg-black hover:text-yellow-400 place-items-center aspect-square" x-on:click="prototypeMenuOpen = !prototypeMenuOpen" x-bind:class="prototypeMenuOpen && 'bg-slate-900 text-orange-300'">
+    {{ '/src/_includes/svg/icons/globe.svg' | svgContents('w-7 h-7') | safe }}
+  </button>
+  </div>
+
+  <div class="col-span-12 px-20 pb-8" x-show="prototypeMenuOpen" x-on:click.outside="prototypeMenuOpen = false">
+    <h2 class="mt-2 font-semibold tracking-widest uppercase text-fluid-14-16">Sider i prototypen</h2>
+    <ul class="mt-3 columns-[32svw] gap-8">
+    {% set pages = collections.proto | sort(false, false, 'data.order') %}
+    {%- for type, pages in pages | groupby('data.type') -%}
+      <li class="py-2 border-t border-black/10 break-inside-avoid">
+        {% for item in pages -%}
+        <a href="{{ item.url }}" class="py-1 underline hover:decoration-2 decoration-from-font underline-offset-4">{{ item.data.title | safe }}</a>{%- if pages.length > 1 and not loop.last %}, {% endif -%}
+        {% if loop.last %}
+          <b class="block pt-1 font-normal text-fluid-14-16 opacity-80">{{ type }}</b>
+        {% endif %}
+        {%- endfor -%}
+      </li>
+    {%- endfor -%}
+    </ul>
+  </div>
+  {% endif %}
 </aside>
