--- a/src/_includes/blank.njk
+++ b/src/_includes/blank.njk
@@ -22,21 +22,8 @@
     {%- block script -%}{%- endblock -%}
   </head>
   <body
-    class="text-fluid-18-20 {{ bodyClass }}"
-    x-data="{
-      indexOpen: false,
-      audienceDropdownOpen: false,
-      languageDropdownOpen: false,
-      loggedIn: true,
-      loginOpen: false,
-      menuOpen: false,
-      myPageOpen: false,
-      newNotifications: true
-    }">
-    {%- if environment === 'production' -%}
+    class="text-fluid-18-20 {{ bodyClass }}">
     {%- include "partials/banner.njk" -%}
-    {%- endif -%}
-
     {%- block content -%}{%- endblock -%}
   </body>
 </html>
