--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -122,6 +122,7 @@
   
   --color-current: currentColor;
   --color-transparent: #fff0;
+  --color-black: #000;
 
   --flex-basis-side: min(100%, 36rem);
   --flex-basis-main: min(100%, 48rem);
@@ -239,14 +240,12 @@
 
   :is(.prose) > :where(h2) {
     font-size: var(--text-fluid-28-32);
-    line-height: 1.33;
-    letter-spacing: -0.0125em;
+    line-height: 1.3;
   }
 
   :is(.prose) > :where(h3) {
-    font-size: var(--text-fluid-22-24);
-    line-height: 1.33;
-    letter-spacing: -0.0125em;
+    font-size: var(--text-fluid-24-28);
+    line-height: 1.4;
   }
 
   :where(.prose) > :where(h2, h3, h4, h5) + :is(.accordion, .readmore, .expander, div) {
@@ -255,14 +254,14 @@
 
   :is(.prose) > h4 {
     font-size: var(--text-fluid-20-22);
-    line-height: 1.33;
+    line-height: 1.4;
     letter-spacing: 0;
  
   }
   :is(.prose) > h5 {
     font-size: var(--text-fluid-18-20);
     font-weight: 650;
-    line-height: 1.33;
+    line-height: 1.4;
     margin-block-end: 0.25em;
     letter-spacing: 0.05em;
     font-variant-caps: all-small-caps;
@@ -659,15 +658,14 @@
 @utility grid-cols-combi {
   --_container: clamp(0rem, -12.5rem + 31.25vw, 12.5rem);
   --_gap: auto;
-  --_prose: minmax(0, 20rem); 
+  --_prose: minmax(0, 27.5rem); 
   --_edge: var(--spacing-page);
   grid-template-columns: 
-    [full-start] var(--_edge) 
-    [container-start] var(--_container) var(--_gap)
-    [main-start] var(--_prose) var(--_prose)
-    [main-end] var(--_gap) 
-    [toc-start] var(--_container) 
-    [container-end toc-end] var(--_edge) [full-end];
+    [full-start] var(--_edge) var(--_gap)
+    [container-start] var(--_container) 
+    [main-start] var(--_prose) var(--_prose) [main-end] 
+    var(--_container) 
+    [container-end] var(--_gap) var(--_edge) [full-end];
 
     :where(& > *) {
       grid-column: main;
