--- a/src/_includes/partials/banner.njk
+++ b/src/_includes/partials/banner.njk
@@ -3,13 +3,15 @@
     <div class="grid p-3 translate-y-0.5 bg-black rounded-full aspect-square shrink-0 place-items-center -ml-20">
       {{ '/src/_includes/svg/icons/helmet.svg' | svgContents('w-8 h-8 translate-x-px text-orange-400 -translate-y-0.5') | safe }}
     </div>
-    <div class="max-w-[50ch] text-balance">
-      <p><span class="mr-1 font-semibold">Hei!</span> Dette er en en prototype til testing og utvikling.
-      <a class="text-blue-600 underline pointer-fine:hover:decoration-2 pointer-fine:hover:text-blue-600" href="https://www.nav.no/">Her er lenken til nav.no</a> om du har kommet feil.</p>
+    <div class="self-center text-balance">
+      <p>
+        <span class="mr-1 font-semibold">Hei!</span> Dette er en en prototype til testing og utvikling.
+        <a class="text-blue-600 underline pointer-fine:hover:decoration-2 pointer-fine:hover:text-blue-600" href="https://www.nav.no/">Her er lenken til nav.no</a> om du har kommet feil.
+      </p>
     </div>
   </div>
+
   {% if page.url !== "/" %}
-    
   <div class="self-center col-start-12 ml-auto">
     <button type="button" class="relative z-20 grid p-2 rounded cursor-pointer bg-orange-400/40 group hover:bg-black hover:text-yellow-400 place-items-center aspect-square" x-on:click="prototypeMenuOpen = !prototypeMenuOpen" x-bind:class="prototypeMenuOpen && 'bg-slate-900 text-orange-300'">
     {{ '/src/_includes/svg/icons/globe.svg' | svgContents('w-7 h-7') | safe }}
@@ -33,4 +35,5 @@
     </ul>
   </div>
   {% endif %}
+
 </aside>
