--- a/src/_includes/partials/banner.njk
+++ b/src/_includes/partials/banner.njk
@@ -6,7 +6,7 @@
     <div class="self-center text-balance">
       <p>
         <span class="mr-1 font-semibold">Hei!</span> Dette er en en prototype til testing og utvikling.
-        <a class="text-blue-600 underline pointer-fine:hover:decoration-2 pointer-fine:hover:text-blue-600" href="https://www.nav.no/">Her er lenken til nav.no</a> om du har kommet feil.
+        <a class="text-blue-600 underline pointer-fine:hover:decoration-2 pointer-fine:hover:text-blue-600" href="https://www.nav.no/">Her er lenken til nav.no</a>, om du har kommet feil.
       </p>
     </div>
   </div>
